# CAST-text-analysis

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/human_annotations/summarization/: processed_human_cast_stability_score_result_h1.json  processed_human_cast_stability_score_result_j2.json  processed_human_cast_stability_score_result_z3.json
data/human_annotations/tagging/annotator_h1_hewei/AP/: Amazon_100_0_results.xlsx  Amazon_100_1_results.xlsx
data/human_annotations/tagging/annotator_h1_hewei/AP+TbS/: Amazon_100_0_results.xlsx  Amazon_100_1_results.xlsx
data/human_annotations/tagging/annotator_h1_hewei/TbS/: Amazon_100_00_results.xlsx  Amazon_100_1_results.xlsx
data/human_annotations/tagging/annotator_h1_hewei/none/: Amazon_100_0_results.xlsx  Amazon_100_1_results.xlsx
data/human_annotations/tagging/annotator_j1/AP/: Amazon_100_0_results.xlsx  Amazon_100_1_results.xlsx
data/human_annotations/tagging/annotator_j1/AP+TbS/: Amazon_100_0_results.xlsx  Amazon_100_1_results.xlsx
data/human_annotations/tagging/annotator_j1/TbS/: Amazon_100_00_results.xlsx  Amazon_100_1_results.xlsx
data/human_annotations/tagging/annotator_j1/none/: Amazon_100_0_results.xlsx  Amazon_100_1_results.xlsx
data/supplementary/: Multilingual Text Summarization Datasets (4-sheet supplement).xlsx
paper/: README.md
summarization/: distribution_analysis_pipeline.py  llm_stability_pipeline.py  path_stability_pipeline.py  summary_pipeline.py
summarization/AblationPrompt/: ap_prompt.md  baseline_prompt.md  cast_prompt.md  tbs_prompt.md
summarization/EvaluationPrompt/: stability_evaluation_prompt.md  summarization_evaluation_prompt.md
summarization/Input/Stability-Input/xlsx/: Multilingual NL Queries without Column Name.xlsx  Multilingual Text Summarization Datasets.xlsx
summarization/Input/Summary-Input/xlsx/: Multilingual NL Queries without Column Name.xlsx  Multilingual Text Summarization Datasets.xlsx
summarization/Output/Stability-Output/: cast_stability_score_result.json  correlation_analysis.py  human_cast_stability_score_result_anonymous.json
summarization/reasoning_path_prompt/: domain_prompt.md  free_reasoning_prompt.md  full_cast_prompt.md  minimal_prompt.md  num_of_bullet_points_prompt.md  num_of_text_items_prompt.md  perspective_prompt.md  structured_reasoning_prompt.md  topwords_only_prompt.md
tagging/: AP+TbS.md  AP.md  TbS.md  evaluation.ipynb  none.md  program.py
(+8 files in other folders)
